--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,21 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Direct Messages – Instagram – Gram Up!</title>
+
+    <!-- Chatra -->
+    <script>
+        (function(d, w, c) {
+            w.ChatraID = 'vgJ5tHaNJ7AarN4tW';
+            var s = d.createElement('script');
+            w[c] = w[c] || function() {
+                (w[c].q = w[c].q || []).push(arguments);
+            };
+            s.async = true;
+            s.src = 'https://call.chatra.io/chatra.js';
+            if (d.head) d.head.appendChild(s);
+        })(document, window, 'Chatra');
+    </script>
+    <!-- /Chatra -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
